ポイントが増えると画像が変わる imageChange 追加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/yaseyase" />
+        app:srcCompat="@drawable/mukimuki_level1" />
 
     <TextView
         android:id="@+id/level"
